--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,4 @@
-altair==5.3.0
-attrs==23.2.0
-blinker==1.8.2
-Bottleneck @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_2bxpizxa3c/croot/bottleneck_1707864819812/work
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.7
-Jinja2==3.1.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-numexpr @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_45yefq0kt6/croot/numexpr_1696515289183/work
-numpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work/dist/numpy-1.26.4-cp310-cp310-macosx_11_0_arm64.whl#sha256=c4b11b3c4d4fdb810039503fe01f311ade06cd1d675fcd6d208800a393f19b69
-packaging @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a6lqg7at4g/croot/packaging_1710807410750/work
-pandas @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_988rx6x546/croot/pandas_1709590494976/work/dist/pandas-2.2.1-cp310-cp310-macosx_11_0_arm64.whl#sha256=2bba141f1a53413635b4cd2cb450f7b50c13ec2f4303ad894adb443cbc25431f
-pillow==10.3.0
-plotly @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1fqquy5q2e/croot/plotly_1708976902906/work
-protobuf==4.25.3
-pyarrow==16.1.0
-pydeck==0.9.1
-Pygments==2.18.0
-python-dateutil @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_6e_fc8xema/croot/python-dateutil_1715108793034/work
-pytz @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4b76c83ik/croot/pytz_1713974318928/work
-referencing==0.35.1
-requests==2.32.2
-rich==13.7.1
-rpds-py==0.18.1
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap==5.0.1
-streamlit==1.34.0
-tenacity @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0ew5sfng29/croot/tenacity_1682972282256/work
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-typing_extensions==4.11.0
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-urllib3==2.2.1
-watchdog==4.0.0
+streamlit
+plotly
+pandas
+pillow
